--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -366,11 +366,54 @@ msgstr "Tus Reservas"
 msgid "You have no bookings yet."
 msgstr "Aún no tienes reservas."
 
-#~ msgid "Cancel"
-#~ msgstr "Cancelar"
+#: gestion/models.py:102
+msgid "Cancelled"
+msgstr "Cancelado"
 
-#~ msgid "Seats"
-#~ msgstr "Asientos"
+#: gestion/templates/gestion/user_profile.html:37
+msgid "Cancel"
+msgstr "Cancelar"
+
+#: gestion/views.py:50
+msgid "Seat successfully reserved. Please complete the payment."
+msgstr "Asiento reservado con éxito. Por favor, complete el pago."
+
+#: gestion/views.py:80
+msgid "Payment successful! Your reservation has been confirmed."
+msgstr "¡Pago exitoso! Su reserva ha sido confirmada."
+
+#: gestion/views.py:84
+#, python-format
+msgid "An unexpected error occurred: {e}"
+msgstr "Ocurrió un error inesperado: {e}"
+
+#: gestion/views.py:87
+msgid "Please confirm your payment for this reservation."
+msgstr "Por favor, confirme su pago para esta reserva."
+
+#: gestion/views.py:120
+msgid "Passenger created successfully! You can now log in."
+msgstr "¡Pasajero creado con éxito! Ahora puede iniciar sesión."
+
+#: gestion/views.py:150
+msgid "Your profile has been updated successfully."
+msgstr "Su perfil ha sido actualizado exitosamente."
+
+#: gestion/views.py:170
+msgid "Booking cancelled successfully."
+msgstr "Reserva cancelada con éxito."
+
+#: gestion/views.py:174
+msgid "Error cancelling booking."
+msgstr "Error al cancelar la reserva."
+
+#: gestion/views.py:183
+msgid "Notification marked as read."
+msgstr "Notificación marcada como leída."
+
+#: gestion/views.py:187
+msgid "Error marking notification as read."
+msgstr "Error al marcar la notificación como leída."
 
 #~ msgid "Booking ID"
 #~ msgstr "ID de Reserva"
