--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: airline_management\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-17 15:40+0000\n"
-"PO-Revision-Date: 2025-10-17 15:41+0000\n"
+"POT-Creation-Date: 2025-10-17 16:33+0000\n"
+"PO-Revision-Date: 2025-10-17 16:34+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "Language: es\n"
@@ -37,6 +37,7 @@ msgid "View Flights"
 msgstr "Ver Vuelos"
 
 #: airline/templates/airline/base.html:49
+#: airline/templates/airline/flight_list.html:173
 msgid "Passengers"
 msgstr "Pasajeros"
 
@@ -65,6 +66,153 @@ msgstr "Iniciar Sesión"
 msgid "Register"
 msgstr "Registrarse"
 
+#: airline/templates/airline/flight_detail_with_seats.html:6
+msgid "Flight"
+msgstr "Vuelo"
+
+#: airline/templates/airline/flight_detail_with_seats.html:6
+msgid "to"
+msgstr "a"
+
+#: airline/templates/airline/flight_detail_with_seats.html:7
+#: airline/templates/airline/flight_list.html:93
+#: airline/templates/airline/home.html:61
+msgid "Departure"
+msgstr "Salida"
+
+#: airline/templates/airline/flight_detail_with_seats.html:8
+#: airline/templates/airline/flight_list.html:97
+#: airline/templates/airline/home.html:70
+msgid "Arrival"
+msgstr "Llegada"
+
+#: airline/templates/airline/flight_detail_with_seats.html:9
+msgid "Airplane"
+msgstr "Avión"
+
+#: airline/templates/airline/flight_detail_with_seats.html:9
+msgid "Capacity"
+msgstr "Capacidad"
+
+#: airline/templates/airline/flight_detail_with_seats.html:10
+msgid "Base Price"
+msgstr "Precio Base"
+
+#: airline/templates/airline/flight_detail_with_seats.html:12
+msgid "Seat Map"
+msgstr "Mapa de Asientos"
+
+#: airline/templates/airline/flight_detail_with_seats.html:16
+msgid "Row"
+msgstr "Fila"
+
+#: airline/templates/airline/flight_detail_with_seats.html:21
+msgid "Seat"
+msgstr "Asiento"
+
+#: airline/templates/airline/flight_detail_with_seats.html:21
+#: airline/templates/airline/flight_detail_with_seats.html:35
+msgid "Reserved"
+msgstr "Reservado"
+
+#: airline/templates/airline/flight_detail_with_seats.html:21
+#: airline/templates/airline/flight_detail_with_seats.html:32
+msgid "Available"
+msgstr "Disponible"
+
+#: airline/templates/airline/flight_detail_with_seats.html:30
+msgid "Legend"
+msgstr "Leyenda"
+
+#: airline/templates/airline/flight_detail_with_seats.html:38
+msgid "Premium"
+msgstr "Premium"
+
+#: airline/templates/airline/flight_detail_with_seats.html:41
+msgid "Executive"
+msgstr "Ejecutivo"
+
+#: airline/templates/airline/flight_list.html:12
+msgid "Flight Management"
+msgstr "Gestión de Vuelos"
+
+#: airline/templates/airline/flight_list.html:14
+msgid "Manage and monitor all airline flights"
+msgstr "Gestiona y monitoriza todos los vuelos de la aerolínea"
+
+#: airline/templates/airline/flight_list.html:19
+msgid "Add New Flight"
+msgstr "Añadir Nuevo Vuelo"
+
+#: airline/templates/airline/flight_list.html:36
+msgid "Total Flights"
+msgstr "Total de Vuelos"
+
+#: airline/templates/airline/flight_list.html:47
+msgid "Scheduled Today"
+msgstr "Programados Hoy"
+
+#: airline/templates/airline/flight_list.html:58
+msgid "Passengers Today"
+msgstr "Pasajeros Hoy"
+
+#: airline/templates/airline/flight_list.html:69
+msgid "Revenue Today"
+msgstr "Ingresos Hoy"
+
+#: airline/templates/airline/flight_list.html:85
+msgid "Aircraft"
+msgstr "Aeronave"
+
+#: airline/templates/airline/flight_list.html:89
+msgid "Route"
+msgstr "Ruta"
+
+#: airline/templates/airline/flight_list.html:101
+msgid "Duration"
+msgstr "Duración"
+
+#: airline/templates/airline/flight_list.html:105
+msgid "Status"
+msgstr "Estado"
+
+#: airline/templates/airline/flight_list.html:109
+msgid "Price"
+msgstr "Precio"
+
+#: airline/templates/airline/flight_list.html:113
+msgid "Actions"
+msgstr "Acciones"
+
+#: airline/templates/airline/flight_list.html:117
+msgid "Reports"
+msgstr "Informes"
+
+#: airline/templates/airline/flight_list.html:162
+msgid "Edit Flight"
+msgstr "Editar Vuelo"
+
+#: airline/templates/airline/flight_list.html:165
+msgid "Delete Flight"
+msgstr "Eliminar Vuelo"
+
+#: airline/templates/airline/flight_list.html:171
+msgid "View Passengers"
+msgstr "Ver Pasajeros"
+
+#: airline/templates/airline/flight_list.html:182
+#: airline/templates/airline/home.html:97
+msgid "No Flights Available"
+msgstr "No hay Vuelos Disponibles"
+
+#: airline/templates/airline/flight_list.html:183
+msgid "No flights have been added to the system yet."
+msgstr "Aún no se han añadido vuelos al sistema."
+
+#: airline/templates/airline/flight_list.html:186
+msgid "Add Your First Flight"
+msgstr "Añade tu Primer Vuelo"
+
 #: airline/templates/airline/home.html:11
 msgid "Airlines"
 msgstr "Aerolíneas"
@@ -81,14 +229,6 @@ msgstr "Empezar"
 msgid "Available Flights"
 msgstr "Vuelos Disponibles"
 
-#: airline/templates/airline/home.html:61
-msgid "Departure"
-msgstr "Salida"
-
-#: airline/templates/airline/home.html:70
-msgid "Arrival"
-msgstr "Llegada"
-
 #: airline/templates/airline/home.html:78
 msgid "per person"
 msgstr "por persona"
@@ -96,10 +236,6 @@ msgstr "por persona"
 #: airline/templates/airline/home.html:86
 msgid "Book Flight"
 msgstr "Reservar Vuelo"
-
-#: airline/templates/airline/home.html:97
-msgid "No Flights Available"
-msgstr "No hay Vuelos Disponibles"
 
 #: airline/templates/airline/home.html:98
 msgid "We're working on adding new routes. Check back soon!"
